# shuttle-actix

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
db/: schema.sql
src/: lib.rs  main.rs
static/: index.html
