[package]
name = "shuttle-actix"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-actix-web"] }
actix-web = "4.2.1"
serde = "1.0"
serde_json = "1.0"
# database
shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
# utils
tracing = "0.1"
