[package]
name = "shuttle-actix"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-actix-web = "0.23.0"
shuttle-runtime = "0.23.0"
tokio = "1"
actix-web = "4.3.1"
actix-files = "0.6.2"
serde = "1.0"
serde_json = "1.0"
# database
shuttle-shared-db = { version = "0.23.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
# utils
tracing = "0.1"
shuttle-static-folder = "0.23.0"
